impresion remota arreglada